# libica

./: .gitignore  .packit.yaml  .travis.yml  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  Makefile.macros  README  README.md  aclocal.m4  autoversion  bootstrap.sh  cleanup.sh  config.sub  configure  configure.ac  configure.in  libica-1.1-4.spec  libica-1.2-0.spec  libica.map  libica.spec  libica.spec.in  openssl-fipshmac  perf_script
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: Makefile.am  icainfo-cex.1  icainfo.1  icastats.1
include/: Makefile.am  ica.h  ica_api.h  ica_err.h  icastats.h  icatypes.h  mech_types.h  z90crypt.h  zcrypt.h
src/: Makefile.am  Makefile.in  Makefile.linux  ansipran.c  cryptica.c  fips.c  genprime.c  ica_api.c  icainfo.c  icalinux.c  icastats.c  icastats_shared.c  init.c  mp.pl  mp_hw.c  mp_modul.c  mp_util.c  mpsubadd.c  opencryptoki_api.c  openssl3-fips.cnf.in  prand.c  rng.c  rsa.c  rsakygen.c  s390_aes.c  s390_cbccs.c  s390_ccm.c  s390_cmac.c  s390_common.c  s390_crypto.c  s390_ctr.c  s390_des.c  s390_drbg.c  s390_drbg_sha512.c  s390_drbg_test_vec.c  s390_ecc.c  s390_gcm.c  s390_prng.c  s390_rsa.c  s390_sha.c  (+6 more)
src/inc/: ansipran.h  fips.h  fixsize.h  genprime.h  ica_int.h  mp_hw.h  mpmath.h  pkamgr.h  platform.h  pran.h  profiler.h  rand.h  rsa.h  s390crypto.h  sha.h  sha256.h  sha512.h  sieve.h  x931prim.h
src/include/: fips.h  icastats.h  init.h  rng.h  s390_aes.h  s390_aux.h  s390_cbccs.h  s390_ccm.h  s390_cmac.h  s390_common.h  s390_crypto.h  s390_ctr.h  s390_des.h  s390_drbg.h  s390_drbg_sha512.h  s390_ecc.h  s390_gcm.h  s390_prng.h  s390_rsa.h  s390_sha.h  test_vec.h
src/perlasm/: s390x.pm
src/tests/: Makefile.am  Makefile.linux  ica-decrypt.c  ica-digest.c  ica-encrypt.c  icastats_test.c  libica_3des_cbc_test.c  libica_3des_cfb_test.c  libica_3des_ctr_test.c  libica_3des_ecb_test.c  libica_3des_ofb_test.c  libica_3des_test.c  libica_aes128_test.c  libica_aes192_test.c  libica_aes256_test.c  libica_aes_cbc_test.c  libica_aes_cfb_test.c  libica_aes_ctr_test.c  libica_aes_ecb_test.c  libica_aes_gcm_kma_test.c  libica_aes_gcm_test.c  libica_aes_ofb_test.c  libica_aes_xts_test.c  libica_cbccs_test.c  libica_ccm_test.c  libica_cmac_test.c  libica_des_cbc_test.c  libica_des_cfb_test.c  libica_des_ctr_test.c  libica_des_ecb_test.c  libica_des_ofb_test.c  libica_des_test.c  libica_drbg_birthdays.c  libica_drbg_test.c  libica_ecdh_test.c  libica_ecdsa_test.c  libica_eckeygen_test.c  libica_fips_test.c  libica_get_functionlist.c  libica_get_functionlist_test.c  (+20 more)
src/tests/libica_sha_test/: Makefile.am  README  libica_sha_test.c  read_rsp.c  sha_tests.c
src/tests/libica_sha_test/include/: read_rsp.h  sha_tests.h
src/tests/libica_sha_test/sha3_test_vectors/: SHA3_224_1.txt  SHA3_224_2.txt  SHA3_256_1.txt  SHA3_256_2.txt  SHA3_384_1.txt  SHA3_384_2.txt  SHA3_512_1.txt  SHA3_512_2.txt
src/tests/libica_sha_test/sha_test_vectors/: SHA1.txt  SHA1_1.txt  SHA1_2.txt  SHA224.txt  SHA224_1.txt  SHA224_2.txt  SHA256.txt  SHA256_1.txt  SHA256_2.txt  SHA384.txt  SHA384_1.txt  SHA384_2.txt  SHA512.txt  SHA512_1.txt  SHA512_2.txt
src/tests/sha_tests/: Makefile.am  libica_sha_test.c  queue_t.c  read_rsp.c  sha_tests.c
src/tests/sha_tests/include/: critical_error.h  queue_t.h
src/tests/sha_tests/sha3_test_vectors/: SHA3_224_2.txt  SHA3_256_2.txt  SHA3_512_1.txt  SHA3_512_2.txt
src/tests/sha_tests/sha_test_vectors/: SHA1_1.txt  SHA1_2.txt  SHA224_1.txt  SHA224_2.txt  SHA384_1.txt  SHA512_2.txt
test/: Makefile.am  adapter_handle_test.c  aes_128_test.c  aes_192_test.c  aes_256_test.c  aes_cbc_test.c  aes_cfb_test.c  aes_ctr_test.c  aes_ecb_test.c  aes_gcm_kma_test.c  aes_gcm_test.c  aes_gcm_test.h  aes_ofb_test.c  aes_xts_test.c  cbccs_test.c  ccm_test.c  cmac_test.c  des_cbc_test.c  des_cfb_test.c  des_ctr_test.c  des_ecb_test.c  des_ofb_test.c  des_test.c  drbg_birthdays_test.c  drbg_birthdays_test.pl  drbg_birthdays_test.sh  drbg_test.c  ec_keygen1_test.sh  ec_keygen2_test.sh  ec_keygen_sw_test.sh  ec_keygen_test.c  ec_keygen_test.sh  ecdh1_test.sh  ecdh2_test.sh  ecdh_hw_test.sh  ecdh_sw_test.sh  ecdh_test.c  ecdh_test.sh  ecdsa1_test.sh  ecdsa2_test.sh  (+44 more)
test/testdata/sha2/: SHA256_1.txt  SHA256_2.txt  SHA384_2.txt  SHA512_1.txt  SHA512_224.txt  SHA512_256.txt
test/testdata/sha3/: SHA3_224_1.txt  SHA3_256_1.txt  SHA3_384_1.txt  SHA3_384_2.txt
