dnl New
dnl Process this file with autoconf to produce a configure script.
AC_INIT(libica,1.3.6)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(libica,1.3.6)

dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.
AC_DISABLE_STATIC

AC_PROG_CC
AC_PROG_LIBTOOL
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h)

CFLAGS="-I./inc -I../include"

dnl If you'd like to install libica to a directory other than $libdir, which by default
dnl is set to ${exec_prefix}/lib, please use the --libdir=/path/to/install option to
dnl configure.
case "$target" in
	i*86* | *powerpc* | *ppc* )
		AC_CHECK_HEADER(linux/icaioctl.h, ,
				AC_MSG_ERROR([*** Unable to find linux/icaioctl.h!!! Do you have \
					      the ICA device driver installed?]))
		;;
	s390-*)
		CFLAGS="$CFLAGS -m31 -D_LINUX_S390_"
		LDFLAGS="$LDFLAGS -m31 -lcrypto"
		;;
	s390x-*)
		CFLAGS="$CFLAGS -m64 -D_LINUX_S390_ -D_LINUX_S390X_"
	        LDFLAGS="$LDFLAGS -m64 -lcrypto"
		;;
esac

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

CC=gcc

AC_ARG_ENABLE([debug], [--enable-debug             add debugging options to CFLAGS],
	      [CFLAGS="$CFLAGS -g -O0"],
	      [CFLAGS="$CFLAGS -O2"])

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP

AC_OUTPUT(Makefile src/Makefile src/tests/Makefile libica.spec)

echo "CFLAGS=$CFLAGS"
